# isup-test-project

./: .gitignore  README.md  docker-compose.yml  install.sh  requests.http
backend/: .env.example  package-lock.json  package.json
backend/src/: config.js  index.js
backend/src/db/: database.js  migrations.js
backend/src/middleware/: auth.js  errorHandler.js
backend/src/routes/: devices.routes.js  events.routes.js  users.routes.js
backend/src/services/: device.service.js  event.service.js  redis.service.js  user.service.js
backend/src/utils/: logger.js
isup-bridge/: CMakeLists.txt  config.json
isup-bridge-node/: index.js  package-lock.json  package.json
isup-bridge/src/: command_handler.cpp  command_handler.h  event_handler.cpp  event_handler.h  isup_server.cpp  isup_server.h  logger.cpp  logger.h  main.cpp  redis_client.cpp  redis_client.h
systemd/: hikvision-backend.service  isup-bridge.service
